# OSZBD_WI_2024

./: .gitignore  README.md  docker-compose.yml
lab1/: lab-1-2-window-function.md  mssql.sql  postgresql.sql  sqlight.sql
lab2/: lab4-index-opt-1.md
lab3/: lab5-index-opt-2.md
lab4/: lab6-7-index-opt-3.md
lab5/: sprawozdanie.md
lab6/: sprawozdanie.md
lab7/: lab-13-14-spat-raport.md
lab7/python-spatial/: 1-oracle.ipynb  pyproject.toml  zad8.ipynb
