[tool.poetry]
name = "python-spatial"
version = "0.1.0"
description = ""
authors = ["Wojciech Przybytek <wprzybytek@student.agh.edu.pl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
oracledb = "^2.2.1"
folium = "^0.16.0"
geojson = "^3.1.0"
shapely = "^2.0.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
